--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,11 @@
   "author": "Arjun Garg",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "config": "^3.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7"
   }
 }
