--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,14 @@
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-paginate": "^6.5.0",
     "react-scripts": "4.0.1",
+    "react-time-ago": "^6.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
     "web-vitals": "^0.2.4"
   },
